[wip] initial services pom